Add cross-platform packaging and bundled native libraries